# bossissa

./: .gitignore  ARCHITECTURE.md  README.md  depth.txt  pyproject.toml  tableone.md
.github/workflows/: analyze.yml  deploy.yml
docs/: app.js  index.css  index.html  stat.html  stat.js
docs/data/: charts.json  metadata.json  multivariate.json  stat_freq.json  tableone.html  tableone.json  tableone.tex  tableone_bonf.tex
scripts/: charts_generator.py  data_loader.py  multivariate_analysis.py  run_analysis.py  stat_generator.py  tableone_generator.py
